tests/fail/if_cond.us
fn main() {
    if "a" { // Expect : Cannot unify `bool` vs `str`

    }

    if 10 {
        
    } // Expect :
}